# graph-modality

./: .env.example  .gitignore  CHANGELOG.md  CHARTER.md  CLAUDE.md  ENGINEERING.md  PLAN.md  README.md  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
canonicalisation/: apply_canonical.py  clusterer.py
classification/: baseline.py  demographic_tasks.py  eval_all_routes.py  route2.py  route2b.py  route3b.py  split.py  test_evaluation.py
data/: download.py
docs/: CHARTER.md  ENGINEERING.md  METHOD_REVIEW.md  PLAN.md
encoding/: build_dataset.py  graph_stats.py  text_encoder.py
extraction/: demographics_extractor.py  extractor.py  tagger.py  validator.py
notebooks/: 01_extraction_review.py  02_graph_exploration.py  03_classification_results.py  04_structural_analysis.py
s1_data/: download.py
s2_extraction/: _v4_run.sh  ambivalence_adjudicator.py  ambivalence_consensus.py  ambivalence_labeler.py  demographics_extractor.py  extractor.py  quality_report.py  tagger.py  validator.py
s3_canonicalisation/: apply_canonical.py  canonical_map.json  canonical_map_v4.json  clusterer.py
s4_encoding/: build_dataset.py  graph_dataset.py  graph_gnn_encoder.py  graph_stats_encoder.py  label_bag_encoder.py  text_encoder.py
s5_classification/: ablation_probe.py  ablation_run.py  analysis_feature_importance.py  analysis_stats.py  baseline.py  classifiers.py  h_edge.py  mlp_gated.py  mlp_late.py  mlp_single.py  mlp_stacked.py  null_ladder.py  repeated_eval.py  repeated_run.py  sklearn_classifier.py  split.py  structure_only_probe.py  (+3 more)
(+2591 files in other folders)
